--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,6 @@
 * {
 	color: #000000;
 	margin: 0;
-	padding: 0;
 	box-sizing: border-box;
 	text-decoration: none;
 }
@@ -12,9 +11,16 @@ body {
 	height: 100vh;
 	width: 100vw;
 	font-family: 'Alumni Sans Inline One', sans-serif;
+	background-color: #a9a9a98c;
 }
 
-
-.root {
+#root {
 	min-height: 100vh;
+	padding: 0 100px;
+}
+
+@media only screen and (max-width: 800px) {
+	#root {
+		padding: 0;
+	}
 }
